--- a/CVonJS/index.html
+++ b/CVonJS/index.html
@@ -2,18 +2,14 @@
 <html lang="en">
 <head>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Test</title>
+    <title>About Timofei Berkut</title>
+    <link rel="icon" type="image/x-icon" href="/images/iconT.png"  >
 </head>
 <body>
   
     <script type='module' src="index.js">
-       
+
     </script>
 </body>
 </html>
